[package]
name = "bino-microservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.6", features = ["serde", "v4"] }
dotenv = "0.15.0"
reqwest = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.0.2", features = ["full"] }
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.1.0"
lazy_static = "1.4.0"
postgres = "0.19.4"